--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -14,8 +14,6 @@ body, h1, h2, h3, h4, h5, h6, p, ol, ul {
     margin: 0;
     padding: 0;
     font-weight: normal;
-    display: flex;
-    justify-content: center;
 }
 
 ol, ul {
@@ -25,6 +23,15 @@ ol, ul {
 img {
     max-width: 100%;
     height: auto;
+}
+
+body {
+    display: flex;
+    justify-content: center;
+}
+
+h1 {
+    text-align: center;
 }
 
 .app {
