make poor static version of the app xD

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+:root {
+    --dark-grey: #222f3e;
+    --grey: #576574;
+    --light-grey: #8395a7;
+    --light-blue: #2e86de;
+
+}
 
 html {
     box-sizing: border-box;
@@ -35,27 +44,105 @@ h1 {
 }
 
 .app {
-    width: 1196px;
+    width: 1440px;
     height: 100vh;
 }
 
 .logo {
     padding: 10px;
+    font-family: "Poppins", sans-serif;
+    font-weight: 700;
+    font-size: 40px;
 }
+
 
 .form, .cv {
     display: inline-block;
     vertical-align: top;
     width: 50%;
-    padding: 10px 20px;
 }
 
 .form {
-    background-color:bisque;
+    padding: 10px 20px;
+}
+
+.form div {
+    margin-bottom: 20px;
+}
+
+.form h3 {
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+    position: relative;
+    color: var(--dark-grey);
+    font-weight: 500;
+}
+
+.form h3::after {
+    content: "";
+    left: 0;
+    bottom: 0;
+    position: absolute;
+    width: 30%;
+    height: 2px;
+    background-color: var(--light-grey);
+    border-radius: 1px;
+}
+
+.form input[type="text"],
+.form select {
+    width: 100%;
+    padding: 8px;
+    margin: 5px 0;
+    border: 2px solid var(--light-grey);
+    border-radius: 5px;
+    color: var(--light-grey);
+    font-weight: 500;
+}
+
+.form input:focus, .form select:focus {
+    outline: none !important;
+    border: 2px solid var(--light-blue);
+    color: var(--light-blue);
+}
+
+.form label {
+    font-size: 14px;
+    font-weight: 500;
+    color: var(--light-grey);
+}
+
+.form button {
+    padding: 10px 20px;
+    border: none;
+    color: #fff;
+    background-color: var(--light-blue);
+    border-radius: 5px;
 }
 
 .cv {
-    background-color:darkkhaki;
+    box-shadow: 5px 5px 10px 0px rgba(210, 210, 210, 1);
 }
 
+.cv div {
+    padding: 20px;
+}
+
+.cv .personal-info {
+    background-color: var(--light-blue);
+    
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+}
+
+.cv .personal-info h2 {
+    margin-bottom: 10px;
+    display: block;
+}
+
+.cv .personal-info p {
+    display: inline-block;
+    width: 50%;
+}
 
