--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -50,6 +50,8 @@ body {
 
 .logo {
     text-align: center;
+    margin: 10px;
+    padding-bottom: 10px; 
 }
 
 .content {
@@ -59,9 +61,6 @@ body {
     justify-content: space-between;
 }
 
-.form, .cv {
-    padding: 10px;
-}
 
 .cv {
     width: 60%;
@@ -72,6 +71,7 @@ body {
     display: grid;
     grid-gap: 10px;
     grid-template-columns: 1fr 1fr;
+    padding: 10px;
 }
 
 .form .form-group {
@@ -85,4 +85,67 @@ body {
 
 .form h3 {
     grid-column: 1/3
+}
+
+.form label {
+    margin-bottom: 5px;
+    font-weight: 500;
+    font-size: 14px;
+    color: var(--light-grey)
+}
+
+.form input[type="text"], .form select {
+    padding: 5px;
+    outline: none !important;
+    border: 2px solid var(--grey);
+    border-radius: 5px;
+    color: var(--grey);
+    /* width: 80%; */
+}
+
+.form input[type="text"]:focus, .form select:focus {
+    color: var(--light-blue);
+    border-color: var(--light-blue);
+    font-weight: 600;
+}
+
+.form button {
+    padding: 8px 0;
+    /* width: 80%; */
+    outline: none !important;
+    border: none;
+    border-radius: 5px;
+    font-weight: 600;
+    letter-spacing: 1px;
+    font-size: 16px;
+    color: #fff;
+    background-color: var(--light-blue);
+    width: 80%;
+    margin-top: 5px;
+    transition: transform .3s ease-in-out;
+}
+
+.form button:hover {
+    cursor: pointer;
+    box-shadow: 0px 0px 5px 0px rgba(114, 114, 119, 1);
+    transform: scale(1.05);
+    transition: transform .2s ease-in-out;
+}
+
+.cv {
+    box-shadow: 8px 0px 14px 0px rgba(114, 114, 119, 1);
+    margin-left: 20px;
+}
+
+.cv .personal-info {
+    background-color: var(--light-blue);
+    padding: 20px;
+}
+
+.cv .info {
+    padding: 20px;
+}
+
+.cv .info div {
+    margin-bottom: 20px;
 }
