--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -33,6 +33,7 @@ img {
     --grey: #576574;
     --light-grey: #8395a7;
     --light-blue: #2e86de;
+    --bright-blue: #3498db;
 }
 
 body {
@@ -137,15 +138,62 @@ body {
     margin-left: 20px;
 }
 
-.cv .personal-info {
-    background-color: var(--light-blue);
+.cv {
+    margin: 0 auto;
     padding: 20px;
-}
-
-.cv .info {
-    padding: 20px;
-}
-
-.cv .info div {
-    margin-bottom: 20px;
-}
+    font-family: Arial, sans-serif;
+    line-height: 1.6;
+    color: #333;
+    margin-left: 20px;
+  }
+  
+  .personal-info {
+    text-align: center;
+    margin-bottom: 30px;
+    border-bottom: 2px solid var(--bright-blue);
+    padding-bottom: 20px;
+  }
+  
+  .personal-info h2 {
+    font-size: 28px;
+    margin-bottom: 10px;
+    color: #2c3e50;
+  }
+  
+  .personal-info p {
+    margin: 5px 0;
+    font-size: 16px;
+  }
+  
+  .info {
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .info > div {
+    width: 48%;
+  }
+  
+  .info h2 {
+    font-size: 22px;
+    color: var(--bright-blue);
+    margin-bottom: 15px;
+    border-bottom: 1px solid var(--bright-blue);
+    padding-bottom: 5px;
+  }
+  
+  .info p {
+    margin: 5px 0;
+    font-size: 16px;
+  }
+  
+  @media (max-width: 600px) {
+    .info {
+      flex-direction: column;
+    }
+    
+    .info > div {
+      width: 100%;
+      margin-bottom: 20px;
+    }
+  }
